# rskafka

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml  docker-compose-kafka.yml  docker-compose-redpanda.yml  kafka_jaas.conf  rust-toolchain.toml
.circleci/: check_versions.sh  config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: semantic.yml
benches/: throughput.rs  write_throughput.rs
docker/: Dockerfile.kafka  kafka_jaas.conf
fuzz/: Cargo.toml
fuzz/fuzz_targets/: protocol_reader.rs  record_batch_body_reader.rs
proptest-regressions/protocol/: api_key.txt  primitives.txt  record.txt
proptest-regressions/protocol/messages/: header.txt
src/: backoff.rs  build_info.rs  client.rs  connection.rs  error.rs  lib.rs  messenger.rs  metadata.rs  record.rs  throttle.rs  topic.rs  transport.rs  validation.rs
src/client/: batch.rs  consumer.rs  controller.rs  error.rs  metadata_cache.rs  mod.rs  partition.rs  producer.rs
src/client/producer/: aggregator.rs  batch.rs  broadcast.rs  result.rs  transformer.rs
src/connection/: topology.rs  transport.rs
src/connection/transport/: keepalive.rs  sasl.rs
src/protocol/: api_key.rs  api_version.rs  error.rs  frame.rs  messages.rs  mod.rs  primitives.rs  record.rs  test_utils.rs  traits.rs  vec_builder.rs
src/protocol/messages/: alter_partition_reassignments.rs  api_versions.rs  constants.rs  create_topic.rs  create_topics.rs  delete_records.rs  delete_topics.rs  elect_leaders.rs  fetch.rs  header.rs  list_offsets.rs  metadata.rs  mod.rs  produce.rs  sasl_auth.rs  sasl_msg.rs  test_utils.rs
tests/: client.rs  consumer.rs  java_helper.rs  produce_consume.rs  producer.rs  rdkafka_helper.rs  test_helpers.rs
