[package]
name = "rskafka"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = [
    "api",
    "async",
    "kafka",
    "protocol",
]
categories = ["api-bindings"]
description = " A minimal Rust client for Apache Kafka "
repository = "https://github.com/influxdata/rskafka/"
documentation = "https://docs.rs/rskafka/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-socks5 = { version = "0.5", optional = true }
async-trait = "0.1"
bytes = "1.1"
crc = "2"
futures = "0.3"
integer-encoding = "3"
parking_lot = "0.11"
pin-project-lite = "0.2"
rand = "0.8"
rustls = { version = "0.20", optional = true }
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.14", default-features = false, features = ["io-util", "net", "rt", "sync", "time"] }
tokio-rustls = { version = "0.23", optional = true }
tracing = "0.1"

[dev-dependencies]
assert_matches = "1.5"
dotenv = "0.15"
futures = "0.3"
proptest = "1"
proptest-derive = "0.3"
rustls-pemfile = "0.2"
rdkafka = "0.28"
tokio = { version = "1.14", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["v4"] }

[features]
default = ["transport-tls"]
fuzzing = []
transport-tls = ["rustls", "tokio-rustls"]
transport-socks5 = ["async-socks5"]

[workspace]
members = [
    ".",
    "fuzz",
]

[package.metadata.docs.rs]
all-features = true
